@@ -6,6 +6,7 @@ New features:
 ..F....... [ZBXNEXT-1181] redesign Host mass update (Eduard)
 
 Bug fixes:
+........S. [ZBX-4857] fixed poller hanging on ssh check when using public key authentication (dimir)
 ..F....... [ZBX-4914] fixed graph name encoding in form preview (Vedmak)
 ........S. [ZBX-4881] fixed slow select queries from partitioned history tables (Sasha)
 ..F....... [ZBX-4495] fixed hintbox positioning (Toms)
@@ -613,6 +614,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.13rc1
 
+........S. [ZBX-4857] fixed poller hanging on ssh check when using public key authentication (dimir)
 ........S. [ZBX-4881] fixed slow select queries from partitioned history tables (Sasha)
 A.F....... [ZBX-4877] updated French translation; thanks to Joseph Bueno (Richlv)
 ..F....... [ZBX-4900] improved performance of the 'Status of Zabbix' dashboard widget (Vedmak)
